--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
+# ignore Maven generated target folders
+target
+
 # Package Files #
 *.jar
 *.war
@@ -21,3 +24,4 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+.DS_Store
