--- a/mini-mybatis/pom.xml
+++ b/mini-mybatis/pom.xml
@@ -13,9 +13,8 @@
   <url>http://www.example.com</url>
 
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <java.version>1.8</java.version>
+    <java.encoding>UTF-8</java.encoding>
   </properties>
 
   <dependencies>
